--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
 			<version>8.0.26</version>
 		</dependency>
 
+    <dependency>
+      <groupId>org.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>3.8.1</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-ehcache</artifactId>
+      <version>5.4.10.Final</version>
+    </dependency>
 	</dependencies>
 </project>
